Src\Changes.txt
Add new items to top.
(This summarizes all changes to all files under Src, including Src\Languages.)

2007-03-17 Kimmo
 PATCH: [ 1682475 ] Improve Line filters dialog
  Src: DirDoc.cpp MainFrm.cpp MainFrm.h Merge.rc Merge.rc MergeDoc.cpp OptionsDef.h
   OptionsInit.cpp PropLineFilter.cpp PropLineFilter.h
  Src/Languages/*: Merge*.rc

2007-03-15 Kimmo
 Trivial string initialization fix
  Src: SyntaxColors.cpp

2007-03-13 Kimmo
 PATCH: [ 1679196 ] Cleanup logfile class usage
  Src: DiffWrapper.cpp DirActions.cpp DirDoc.cpp DirScan.cpp FolderCmp.cpp MainFrm.cpp
   Merge.cpp Merge.h MergeDoc.cpp Plugins.cpp StdAfx.cpp StdAfx.h
  Src/Common: LogFile.cpp LogFile.h

2007-03-12 Kimmo
 Remove unneeded include lines
  Src: DirDoc.cpp
 Remove unneeded initialization
  Src: CCPrompt.cpp
 PATCH: [ 1678676 ] Swedish translation of New Copy Confirmation dialog
  Submitted by Hans Eriksson
  Src/Languages/Swedish: MergeSwedish.rc

2007-03-11 Jan Hryz
 Czech translation - translation of "confirm copy" dialog
  Src/Languages/Czech/MergeCzech.rc

2007-03-08 Kimmo
 PATCH: [ 1664689 ] French translation (update2)
  Submitted by Jean-F Jolin
  Src/Languages/French: MergeFrench.rc
 Remove two unused functions, improve comments
  Src: DirActions.cpp
 BUG: [ 1670991 ] File panes lost focus after delete confirmation dialog
  Src: DirActions.cpp
 Fix comment about contributors file
  Src: AboutDlg.cpp
 PATCH: [ 1676802 ] Move compare options to DiffContext
  Src: ByteComparator.cpp ByteComparator.h CompareOptions.cpp CompareOptions.h
   DiffContext.cpp DiffContext.h DirDoc.cpp DirDoc.h FolderCmp.cpp

2007-03-07 Kimmo
 PATCH: [ 1675087 ] New copy confirmation dialog
  Src: DirActions.cpp FileActionScript.h Merge.dsp Merge.rc resource.h
  Src new files: ConfirmFolderCopyDlg.cpp ConfirmFolderCopyDlg.h
  Src/Languages/*: Merge*.rc

2007-03-07 Takashi
 PATCH: [ 1675211 ] Fix crash when hiding parent folder item on folder view
  Src/DirView.cpp

2007-03-06 Kimmo